--- a/client/static/index.html
+++ b/client/static/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf8">
-  <title>Indoor delivery system</title>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>INDESY | Indoor delivery system</title>
+  <meta name="description" content="The web application for an indoor delivery system." />
+  <!-- Use minimum-scale=1 to enable GPU rasterization -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1" />
+  <link rel="stylesheet" type="text/css" href="/main.css" />
 </head>
 
 <body>
