--- a/source/static/index.html
+++ b/source/static/index.html
@@ -9,6 +9,7 @@
   <!-- Use minimum-scale=1 to enable GPU rasterization -->
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1" />
   <link rel="stylesheet" type="text/css" href="/main.css" />
+  <link rel="icon" type="image/png" href="/favicon.png" sizes="1024x1024">
 </head>
 
 <body>
