--- a/source/static/index.html
+++ b/source/static/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>INDESY | Indoor delivery system</title>
+  <title>INDESY</title>
   <meta name="description" content="The web application for an indoor delivery system." />
   <!-- Use minimum-scale=1 to enable GPU rasterization -->
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1" />
